--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
         run: npm install -g surge
      
       - name: Deploying on Surge
-        run: surge ./build https://blend.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
+        run: surge ./build https://blend-1.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
